--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,10 @@ body{
     margin: 0;
 }
 
+main{
+    padding: 36px;
+}
+
 .header{
     display: flex;
     align-items: center;
@@ -33,4 +37,21 @@ body{
 
 .form{
     display: grid;
+    grid-template: 40px 40px / 1fr 1fr;
+    gap: 17px;
+}
+
+.form--inputs{
+    font-family: "Karla", sans-serif;
+    border-radius: 5px;
+    border: 1px solid gray;
+}
+
+.form--button{
+    grid-column: 1 / -1;
+    font-family: "Karla", sans-serif;
+    border-radius: 5px;
+    background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+    color: #fff;
+    border: none;
 }
