--- a/src/style.css
+++ b/src/style.css
@@ -54,4 +54,9 @@ main{
     background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
     color: #fff;
     border: none;
+    cursor: pointer;
+}
+
+.meme--image{
+    max-width: 100%;
 }
