--- a/src/style.css
+++ b/src/style.css
@@ -57,6 +57,48 @@ main{
     cursor: pointer;
 }
 
+.meme{
+    position: relative;
+}
+
 .meme--image{
     max-width: 100%;
+    margin-left: auto;
+    margin-right: auto  ;
+    border-radius: 3px;
+    display: flex;
+    /* width: 50%; */
+}
+
+.meme--text{
+    position: absolute;
+    width: 80%;
+    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 15px 0;
+    padding: 0 5px;
+    font-family: impact, sans-serif;
+    font-size: 2em;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 1px;
+    text-shadow:
+        2px 2px 0 #000,
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        0 2px 0 #000,
+        2px 0 0 #000,
+        0 -2px 0 #000,
+        -2px 0 0 #000,
+        2px 2px 5px #000;
+}
+
+.bottom{
+    bottom: 0;
+}
+
+.top{
+    top: 0;
 }
